--- a/index.html
+++ b/index.html
@@ -496,7 +496,97 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-container">
+          <form action="">
+            <label class="subscribe-label" for="email">Subscribe</label>
+            <div class="input-wrapper">
+              <input
+                class="subscribe-input"
+                type="email"
+                name="user_email"
+                id="email"
+                placeholder="E-mail"
+              />
+              <div class="subscribe-btn-container">
+                <button class="subscribe-btn" type="submit">
+                  Subscribe
+                  <svg class="icon-send" width="24" height="20">
+                    <use href="./images/icons/icons.svg#icon-send"></use>
+                  </svg>
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="close-btn" type="button">
+          <svg class="close-icon" width="8" height="8">
+            <use href="./images/icons/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="input-wrapper">
+            <label class="username-label" for="user-name">Name</label>
+            <div class="username-wrapper">
+              <svg class="username-icon" width="18" height="18">
+                <use href="./images/icons/icons.svg#icon-person"></use>
+              </svg>
+              <input class="username-input" type="text" id="user-name" />
+            </div>
+          </div>
+          <div class="input-wrapper">
+            <label class="phone-label" for="user-phone">Phone</label>
+            <div class="username-wrapper">
+              <svg class="phone-icon" width="18" height="24">
+                <use href="./images/icons/icons.svg#icon-phone"></use>
+              </svg>
+              <input class="phone-input" type="tel" id="user-phone" />
+            </div>
+          </div>
+          <div class="input-wrapper">
+            <label class="email-label" for="user-email">Email</label>
+            <div class="username-wrapper">
+              <svg class="email-icon" width="18" height="24">
+                <use href="./images/icons/icons.svg#icon-email"></use>
+              </svg>
+              <input class="email-input" type="email" id="user-email" />
+            </div>
+          </div>
+          <div class="input-wrapper">
+            <label class="textarea-label" for="user-comment">Comment</label>
+            <textarea
+              class="form-comment"
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="checkbox-wrapper">
+            <input
+              class="agree-checkbox"
+              type="checkbox"
+              name="agree-check"
+              id="agree-check"
+            />
+            <label class="checkbox-text" for="agree-check">
+              <span class="check">
+                <svg class="blank-check" width="10" height="8">
+                  <use href="./images/icons/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="modal-link" href="">Privacy Policy</a>
+            </label>
+          </div>
+          <div class="form-btn-wrapper">
+            <button class="form-btn">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
