--- a/index.html
+++ b/index.html
@@ -497,17 +497,17 @@
           </ul>
         </div>
         <div class="subscribe-container">
-          <form action="">
-            <label class="subscribe-label" for="email">Subscribe</label>
+          <form>
             <div class="input-wrapper">
-              <input
-                class="subscribe-input"
-                type="email"
-                name="user_email"
-                id="email"
-                placeholder="E-mail"
-              />
-              <div class="subscribe-btn-container">
+              <p class="subscribe-label">Subscribe</p>
+              <div class="input-button-wrapper">
+                <input
+                  class="subscribe-input"
+                  type="email"
+                  name="user_email"
+                  id="email"
+                  placeholder="E-mail"
+                />
                 <button class="subscribe-btn" type="submit">
                   Subscribe
                   <svg class="icon-send" width="24" height="20">
@@ -520,7 +520,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop is-open">
+    <div class="backdrop">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
