--- a/index.html
+++ b/index.html
@@ -496,26 +496,24 @@
             </li>
           </ul>
         </div>
+
         <div class="subscribe-container">
-          <form>
-            <div class="input-wrapper">
-              <p class="subscribe-label">Subscribe</p>
-              <div class="input-button-wrapper">
-                <input
-                  class="subscribe-input"
-                  type="email"
-                  name="user_email"
-                  id="email"
-                  placeholder="E-mail"
-                />
-                <button class="subscribe-btn" type="submit">
-                  Subscribe
-                  <svg class="icon-send" width="24" height="20">
-                    <use href="./images/icons/icons.svg#icon-send"></use>
-                  </svg>
-                </button>
-              </div>
-            </div>
+          <p class="subscribe-text">Subscribe</p>
+          <form class="input-wrapper">
+            <label class="input-button-wrapper">
+              <input
+                class="subscribe-input"
+                type="email"
+                name="user_email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscribe-btn" type="submit">
+              Subscribe
+              <svg class="icon-send" width="24" height="20">
+                <use href="./images/icons/icons.svg#icon-send"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
