--- a/index.html
+++ b/index.html
@@ -504,13 +504,13 @@
               <input
                 class="subscribe-input"
                 type="email"
-                name="user_email"
+                name="user-email"
                 placeholder="E-mail"
               />
             </label>
             <button class="subscribe-btn" type="submit">
               Subscribe
-              <svg class="icon-send" width="24" height="20">
+              <svg class="icon-send" width="24" height="24">
                 <use href="./images/icons/icons.svg#icon-send"></use>
               </svg>
             </button>
