--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
 
         <div class="subscribe-container">
           <p class="subscribe-text">Subscribe</p>
-          <form class="input-wrapper">
+          <form class="subscribe-wrapper">
             <label class="input-button-wrapper">
               <input
                 class="subscribe-input"
@@ -518,7 +518,7 @@
         </div>
       </div>
     </footer>
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="close-btn" type="button">
           <svg class="close-icon" width="8" height="8">
