--- a/index.html
+++ b/index.html
@@ -530,28 +530,33 @@
           <div class="input-wrapper">
             <label class="username-label" for="user-name">Name</label>
             <div class="username-wrapper">
-              <svg class="username-icon" width="18" height="18">
+              <input
+                class="username-input"
+                type="text"
+                name="user-name"
+                id="user-name"
+              />
+              <svg class="username-icon" width="18" height="24">
                 <use href="./images/icons/icons.svg#icon-person"></use>
               </svg>
-              <input class="username-input" type="text" id="user-name" />
             </div>
           </div>
           <div class="input-wrapper">
             <label class="phone-label" for="user-phone">Phone</label>
             <div class="username-wrapper">
+              <input class="phone-input" type="tel" id="user-phone" />
               <svg class="phone-icon" width="18" height="24">
                 <use href="./images/icons/icons.svg#icon-phone"></use>
               </svg>
-              <input class="phone-input" type="tel" id="user-phone" />
             </div>
           </div>
           <div class="input-wrapper">
             <label class="email-label" for="user-email">Email</label>
             <div class="username-wrapper">
+              <input class="email-input" type="email" id="user-email" />
               <svg class="email-icon" width="18" height="24">
                 <use href="./images/icons/icons.svg#icon-email"></use>
               </svg>
-              <input class="email-input" type="email" id="user-email" />
             </div>
           </div>
           <div class="input-wrapper">
