--- a/index.html
+++ b/index.html
@@ -542,25 +542,35 @@
             </div>
           </div>
           <div class="input-wrapper">
-            <label class="phone-label" for="user-phone">Phone</label>
+            <label class="username-label" for="user-phone">Phone</label>
             <div class="username-wrapper">
-              <input class="phone-input" type="tel" id="user-phone" />
-              <svg class="phone-icon" width="18" height="24">
+              <input
+                class="username-input"
+                type="tel"
+                name="user-phone"
+                id="user-phone"
+              />
+              <svg class="username-icon" width="18" height="24">
                 <use href="./images/icons/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
           <div class="input-wrapper">
-            <label class="email-label" for="user-email">Email</label>
+            <label class="username-label" for="user-email">Email</label>
             <div class="username-wrapper">
-              <input class="email-input" type="email" id="user-email" />
-              <svg class="email-icon" width="18" height="24">
+              <input
+                class="username-input"
+                type="email"
+                name="user-email"
+                id="user-email"
+              />
+              <svg class="username-icon" width="18" height="24">
                 <use href="./images/icons/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
           <div class="input-wrapper">
-            <label class="textarea-label" for="user-comment">Comment</label>
+            <label class="username-label" for="user-comment">Comment</label>
             <textarea
               class="form-comment"
               name="user-comment"
