--- a/index.html
+++ b/index.html
@@ -580,12 +580,13 @@
           </div>
           <div class="checkbox-wrapper">
             <input
-              class="agree-checkbox"
+              class="visually-hidden"
               type="checkbox"
-              name="agree-check"
-              id="agree-check"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
             />
-            <label class="checkbox-text" for="agree-check">
+            <label class="checkbox-text" for="user-privacy">
               <span class="check">
                 <svg class="blank-check" width="10" height="8">
                   <use href="./images/icons/icons.svg#icon-check"></use>
@@ -595,9 +596,7 @@
               <a class="modal-link" href="">Privacy Policy</a>
             </label>
           </div>
-          <div class="form-btn-wrapper">
-            <button class="form-btn">Send</button>
-          </div>
+          <button class="form-btn">Send</button>
         </form>
       </div>
     </div>
