--- a/index.html
+++ b/index.html
@@ -569,8 +569,8 @@
               </svg>
             </div>
           </div>
-          <div class="input-wrapper">
-            <label class="username-label" for="user-comment">Comment</label>
+          <div class="textarea-wrapper">
+            <label class="textarea-label" for="user-comment">Comment</label>
             <textarea
               class="form-comment"
               name="user-comment"
