--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
             </div>
           </div>
           <div class="textarea-wrapper">
-            <label class="textarea-label" for="user-comment">Comment</label>
+            <label class="username-label" for="user-comment">Comment</label>
             <textarea
               class="form-comment"
               name="user-comment"
